--- a/src/main/webapp/content/scss/themes/theme-dark.scss
+++ b/src/main/webapp/content/scss/themes/theme-dark.scss
@@ -305,5 +305,5 @@ input:-webkit-autofill:active {
     --feature-card-disabled-bg: #4a2e2e;
     --feature-card-inactive-bg: #3a3a3a;
     --feature-card-heading-color: #fff;
-    --onboarding-content-bg: #000;
+    --onboarding-content-bg: #3a3a3a;
 }
